[package]
name = "ti-sbl"
version = "0.1.0"
authors = ["Locha Mesh Developers <contact@locha.io>"]
edition = "2018"

# Removing workspace crate, can use the prog as an example

[dependencies]
serialport = { git = "https://github.com/DoumanAsh/serialport-rs", branch = "overlapped_io" }
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
glob = "0.3"
